<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="#D5E8E6"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingTop="8dp"
    android:paddingEnd="15dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/rv_company_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rv_company_item_type"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rv_company_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rv_company_item_name"
        android:layout_below="@+id/rv_company_item_type" />

    <TextView
        android:id="@+id/rv_company_item_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rv_company_item_name"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/rv_company_item_name"
        android:text="TextView" />

    <TextView
        android:id="@+id/rv_company_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rv_company_item_name"
        android:text="@string/rv_company_age" />

    <TextView
        android:id="@+id/rv_company_age_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rv_company_age"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/rv_company_age"
        android:text="TextView" />

    <TextView
        android:id="@+id/rv_company_competences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rv_company_age"
        android:text="@string/rv_company_competences" />

    <TextView
        android:id="@+id/rv_company_competences_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rv_company_competences"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/rv_company_competences"
        android:text="TextView" />
</RelativeLayout>