<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="#E6F4E6"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="8dp"
    android:paddingEnd="30dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/rv_company_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rv_employee_item_type"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rv_employee_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rv_employee_item_name"
        android:layout_below="@+id/rv_company_item_type" />

    <TextView
        android:id="@+id/rv_employee_item_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rv_employee_item_name"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/rv_employee_item_name"
        android:text="NameText" />

    <TextView
        android:id="@+id/rv_employee_item_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rv_employee_item_name"
        android:layout_marginTop="2dp"
        android:text="@string/rv_employee_item_phone_number" />

    <TextView
        android:id="@+id/rv_employee_item_phone_number_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rv_employee_item_phone_number"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/rv_employee_item_phone_number"
        android:text="PhoneNumberText" />

    <TextView
        android:id="@+id/rv_employee_item_skills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rv_employee_item_phone_number"
        android:layout_marginTop="2dp"
        android:text="@string/rv_employee_item_skills" />

    <TextView
        android:id="@+id/rv_employee_item_skills_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rv_employee_item_skills"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@+id/rv_employee_item_skills"
        android:text="SkillsText" />
</RelativeLayout>